# serverless-rust

./: .gitignore  404.html  CNAME  docusaurus.config.js  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: deploy.yaml  test-deploy.yaml
assets/css/: styles.fda55b57.css
assets/js/: 0763d20a.d68dee2b.js  0e384e19.75c76059.js  148c8138.be633453.js  14eb3368.b9e17d23.js  176c3838.d0048a34.js  17896441.671b1b01.js  1f391b9e.0eda46c3.js  20367650.106cf855.js  2237.94af077b.js  252529aa.3d49205e.js  25875612.26fa7e08.js  27183d9b.8fd574dc.js  2acba10e.c3efa2d2.js  30a8e51c.7f8ba992.js  3152febb.46c6cd64.js  33a0cc39.cbbfca94.js  3554.a0b57c07.js  393be207.e600fded.js  590a6d89.b626f9c4.js  5e95c892.4cc4039d.js  69cc1418.e1a701a2.js  6c25fcca.03efd826.js  6f2555fe.2116cf1a.js  6f97a589.4a6cf7f5.js  74c6db6c.36e5037a.js  75b00a6f.7433f9ee.js  7e83df01.fffd3af9.js  8979.7bf39861.js  91dbeed7.fd63d0c5.js  935f2afb.de0b7562.js  988781e2.dc8947d1.js  9b42efc4.afa38cef.js  9d22cf4a.ec9e8a11.js  9d37d1c3.dcb612ec.js  a464124c.b612d875.js  a4ccafbf.faccc82a.js  a7bd4aaa.8fa1d613.js  a94703ab.2d41d43c.js  af95a78a.13ed17d0.js  b0d1b823.4ae825ae.js  (+25 more)
docs/: intro.md  why-rust.html
docs/category/: api.html  cicd-1.html  cicd.html  common-patterns.html  containers.html  database.html  fundamentals.html  getting-started.html  messaging.html  security.html
docs/fundamentals/: _category_.json  aws-sdk-rust.html  aws-sdk-rust.md  cargo-toml.html  cargo-toml.md  how-lambda-works.html  how-lambda-works.md  invocation-modes.html  invocation-modes.md  networking.html  networking.md  structure-of-a-lambda.html  structure-of-a-lambda.md
docs/fundamentals/ci-cd/: _category_.json  cargo-lambda.html  cargo-lambda.md
docs/getting-started/: _category_.json  your-first-lambda.html  your-first-lambda.md
docs/patterns/: _category_.json
docs/patterns/api-patterns/: _category_.json  cdk-cargo-lambda-lambda-per-verb-ddb.html  cdk-cargo-lambda-lambda-per-verb-ddb.md  cors-domain-allow-list.html  cors-domain-allow-list.md  web-framework-on-lambda.html  web-framework-on-lambda.md  web-framework-on-lambda.mdx
docs/patterns/ci-cd-patterns/: _category_.json  code-deploy-lifecycle-hook.html  code-deploy-lifecycle-hook.md
docs/patterns/container-patterns/: _category_.json
docs/patterns/database-patterns/: _category_.json  ddb-basic-operations.html  ddb-basic-operations.md  ddb-basic-stream.html  ddb-basic-stream.md
docs/patterns/messaging-patterns/: _category_.json  eventbridge-event-handler.html  eventbridge-event-handler.md  eventbridge-event-handler.mdx  eventbridge-putevent.html  eventbridge-putevent.md  (+8 more)
src/css/: custom.css
src/pages/: index.js
templates/patterns/api-patterns/actix-on-lambda/: Cargo.toml  template.yaml
templates/patterns/api-patterns/actix-on-lambda/src/: main.rs  model.rs
templates/patterns/api-patterns/cors-allow-list/: Cargo.toml
templates/patterns/api-patterns/cors-allow-list/src/: main.rs
templates/patterns/api-patterns/lambda-per-verb/lambdas/get-by-id/: Cargo.toml
templates/patterns/api-patterns/lambda-per-verb/lambdas/get-by-id/src/: main.rs
templates/patterns/api-patterns/rocket-on-lambda/: Cargo.toml  samconfig.toml  template.yaml
templates/patterns/api-patterns/rocket-on-lambda/src/: main.rs
templates/patterns/ci-cd-patterns/codedeploy-lifecyle-hook/: Cargo.toml
templates/patterns/ci-cd-patterns/codedeploy-lifecyle-hook/src/: main.rs
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/event-publisher/: Cargo.toml
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/event-publisher/src/: main.rs
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/post/: Cargo.toml
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/post/src/: main.rs
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/shared/: Cargo.toml
templates/patterns/complete-patterns/cdk-crud-api-with-event-publisher/lambdas/shared/src/: create_order_command.rs  delete_order_command.rs  get_order_query.rs  lib.rs  order.rs  update_order_command.rs  view_models.rs
templates/patterns/database-patterns/ddb-basic-operations/: Cargo.toml
templates/patterns/database-patterns/ddb-basic-operations/src/: client.rs  data.rs  errors.rs  main.rs  models.rs
templates/patterns/database-patterns/ddb-stream-lambda-handler/: Cargo.toml
templates/patterns/database-patterns/ddb-stream-lambda-handler/src/: main.rs  models.rs
templates/patterns/messaging-patterns/kinesis-message-processor/lambdas/new-message-processor/: Cargo.toml
templates/patterns/messaging-patterns/kinesis-message-processor/lambdas/new-message-processor/src/: main.rs
templates/patterns/messaging-patterns/kinesis-message-processor/test-utility/: Cargo.toml
templates/patterns/messaging-patterns/kinesis-message-processor/test-utility/src/: main.rs
templates/patterns/messaging-patterns/sqs-message-processor/lambdas/shared/: Cargo.toml
templates/patterns/messaging-patterns/sqs-message-processor/lambdas/shared/src/: lib.rs
templates/patterns/security-patterns/api-gateway-authorizer/source/shared/: Cargo.toml
templates/patterns/security-patterns/api-gateway-authorizer/source/shared/src/: lib.rs
templates/patterns/security-patterns/api-gateway-authorizer/source/token-authorizer/: Cargo.toml
templates/patterns/security-patterns/api-gateway-authorizer/source/token-authorizer/src/: main.rs
templates/patterns/security-patterns/api-gateway-authorizer/source/token-authorizer/test_events/: bad_token.json  good_token.json
templates/patterns/security-patterns/cognito-token-customization/lambdas/handler/: Cargo.toml
templates/patterns/security-patterns/cognito-token-customization/lambdas/handler/src/: main.rs
templates/patterns/security-patterns/cognito-token-customization/lambdas/shared/: Cargo.toml
templates/patterns/security-patterns/cognito-token-customization/lambdas/shared/src/: data.rs  lib.rs  models.rs
(+74 files in other folders)
