[package]
name = "codedeploy-sample"
version = "1.0.0"
authors = ["Benjamen Pyle", "James Eastham"]
license = "GPL-3"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.0", features = ["codedeploy"] }
lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
aws-config = { version = "1.1.7",  features = ["behavior-version-latest"] }
aws-sdk-codedeploy = "1.16.0"
reqwest = "0.12.4"
openssl = {  version = "0.10.64" , features = ["vendored"]}
