[package]
name = "dynamodb-sample"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
aws-sdk-dynamodb = "1.2.0"

tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "registry",
] }
chrono = "0.4.37"
thiserror = "1.0.58"
svix-ksuid = "0.8.0"
