[package]
name = "kinesis-test-utility"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0"
aws_lambda_events = "0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = { version = "0", default-features = false, features = ["fmt"] }
clap = { version = "4.5.4", features = ['color', 'cargo'] }
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
aws-sdk-kinesis = "1.23.0"
rand = "0.8.5"
bincode = "1.3.3"