[package]
name = "get-by-id"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

lambda_http = "0.10.0"
tokio = { version = "1.36.0", features = ["macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4","fast-rng","macro-diagnostics"]}
serde_json = "1.0.114"
