[package]
name = "event-publisher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
aws_lambda_events = { version = "0.14.0", default-features = false, features = [
    "dynamodb",
] }
aws-sdk-sns = "1.22"
aws-config = { features = ["behavior-version-latest"], version = "1.0" }
lambda_runtime = "0.11"
tokio = { version = "1.36.0", features = ["macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde_dynamo = "4.2.13"
aws-sdk-dynamodb = "1.2"
cloudevents = "0.1"
uuid = { version = "1.7.0", features = ["v4"] }