[package]
name = "post"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

lambda_http = "0.11.0"
tokio = { version = "1.36.0", features = ["macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_json = "1.0.114"
aws-config = { features = ["behavior-version-latest"], version = "1.0" }
aws-sdk-dynamodb = "1.2"
