[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
uuid = { version = "1.7", features = ["v4","fast-rng","macro-diagnostics"]}
aws-config = { features = ["behavior-version-latest"], version = "1.0" }
aws-sdk-dynamodb = "1.2"
anyhow = "1.0.82"
thiserror = "1.0.59"
tracing = "0.1.40"