[package]
name = "sqs-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

lambda_runtime = "0"
aws_lambda_events = "0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = { version = "0", default-features = false, features = ["fmt"] }
