[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = { version = "0", default-features = false, features = ["fmt"] }
