[package]
name = "access-token-authorizer"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = "1.0.136"
serde_json = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

lambda_runtime = "0.8.3"
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
aws-sdk-dynamodb = "1.2.0"

tokio = { version = "1", features = ["macros"] }
thiserror = "1.0.56"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "registry",
] }

lambda-events = "0.0.0"
aws_lambda_events = { version = "0.13.1", features = ["apigw"] }
jsonwebtokens-cognito = "0.1.1"
jsonwebtokens = "1.2.0"
openssl = { version = "0.10.35", features = ["vendored"] }
